# chinormfilter

./: .gitignore  Makefile  README.md  README.rst  pyproject.toml
.github/workflows/: pytest.yml
chinormfilter/: cli.py
tests/: test.txt  test_chinormfilter.py
