[tool.poetry]
name = "chinormfilter"
version = "0.3.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.scripts]
chinormfilter = "chinormfilter.cli:cli"

[tool.poetry.dependencies]
python = "^3.7"
sudachipy = "^0.5.2"
sudachidict_full = "^20201223.post1"
sudachidict_core = "^20201223.post1"

[tool.poetry.dev-dependencies]
pytest = "^3.7"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
