[tool.poetry]
name = "chinormfilter"
version = "0.5.0"
description = ""
authors = ["po3rin <abctail30@gmail.com>"]
repository = "http://github.com/po3rin/chinormfilter"
homepage = "http://github.com/po3rin/chinormfilter"
readme = "README.md"
license = "Apache-2.0"

[tool.poetry.scripts]
chinormfilter = "chinormfilter.cli:cli"

[tool.poetry.dependencies]
python = "^3.7"
sudachipy = "^0.5.2"
sudachidict_full = "^20201223.post1"
sudachidict_core = "^20201223.post1"

[tool.poetry.dev-dependencies]
pytest = "^3.7"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
