[tool.poetry]
name = "chinormfilter"
version = "0.5.3"
description = ""
authors = ["po3rin <abctail30@gmail.com>"]
repository = "http://github.com/po3rin/chinormfilter"
homepage = "http://github.com/po3rin/chinormfilter"
readme = "README.md"
license = "Apache-2.0"

[tool.poetry.scripts]
chinormfilter = "chinormfilter.cli:cli"

[tool.poetry.dependencies]
python = "^3.11"
sudachipy = "^0.6.7"
sudachidict-core = "^20230110"
sudachidict-full = "^20230110"

[tool.poetry.dev-dependencies]
pytest = "^6.2.1"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
